feat: configuração inicial do projeto

--- a/app.json
+++ b/app.json
@@ -22,6 +22,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ae3656d1-e348-4108-be15-0682f859bb47"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/ae3656d1-e348-4108-be15-0682f859bb47"
     }
   }
 }
