--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-size-matters": "^0.4.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
