--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "15.2.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "eslint-config-expo": "^7.0.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "3.3.1",
+    "react-native-svg-transformer": "^1.4.0",
     "typescript": "^5.1.3"
   },
   "private": true
